# geoFields/src/main/java/com/geofields/dto/orgmanager/PendingItem.java
@@ -1,0 +1,13 @@
+package com.geofields.dto.orgmanager;
+
+import java.time.LocalDateTime;
+
+public record PendingItem(
+        long id,
+        String lastName,
+        String firstName,
+        String middleName,
+        String login,
+        String email,
+        LocalDateTime createdAt) {
+}
